# SauerCheetos

./: .clang-format  .gitignore  CMakeLists.txt  Player.rcnet  README.md  entity-thingy.txt  insights.txt  sauerbraten.CT
include/: Entity.hpp  Key.hpp  cheat.hpp  globals.hpp
src/: Key.cpp  cheat.cpp  globals.cpp  main.cpp
